--- a/beer.html
+++ b/beer.html
@@ -3,6 +3,7 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" style="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Quicksand" rel="stylesheet">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>Mmmmmmm. Beer.</title>
@@ -10,12 +11,12 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1 class="display-4">What style beer should you be drinking?</h1>
+        <h1 class="display-4">What's your Beerdentity?</h1>
         <p class="lead">Are you an easy-breezy pilsner? A sturdy, loud stout? Or the titular Millenial beer, the IPA?</p>
       </div>
       <div id="blanks">
         <form id="favoriteColor">
-          <p>What's your favorite color?</p>
+          <p class="question">What's your favorite color?</p>
           <div class="radio-test">
             <div class="radio">
               <label>
@@ -37,9 +38,9 @@
             </div>
           </div>
 
-          <br><br>
+          <br>
 
-            <p>What's your favorite dessert?</p>
+            <p class="question">What's your favorite dessert?</p>
             <div class="radio-test">
               <div class="radio">
                 <label>
@@ -61,9 +62,9 @@
               </div>
             </div>
 
-            <br><br>
+            <br>
 
-              <p>What's your favorite activity?</p>
+              <p class="question">What's your favorite activity?</p>
               <div class="radio-test">
                 <div class="radio">
                   <label>
@@ -85,9 +86,9 @@
                 </div>
               </div>
 
-              <br><br>
+              <br>
 
-                <p>What's your favorite drinking glass?</p>
+                <p class="question">What's your favorite drinking glass?</p>
                 <div class="radio-test">
                   <div class="radio">
                     <label>
@@ -109,9 +110,9 @@
                   </div>
                 </div>
 
-                <br><br>
+                <br>
 
-                  <p>What's your favorite smell?</p>
+                  <p class="question">What's your favorite smell?</p>
                   <div class="radio-test">
                     <div class="radio">
                       <label>
@@ -132,9 +133,10 @@
                       </label>
                     </div>
                   </div>
-                  <button type="submit" class="btn btn-info">What am I drinkin'?</button>
+				  <br>
+                  <button type="submit" class="btn btn-info active">Beer me!</button>
                   </form>
-                  <br><br>
+                  <br>
           
 
       </div><br>
