Add images, reset button, show elements in js.

--- a/beer.html
+++ b/beer.html
@@ -64,29 +64,29 @@
 
             <br>
 
-              <p class="question">What's your favorite activity?</p>
-              <div class="radio-test">
-                <div class="radio">
-                  <label>
-                    <input type="radio" name="activity" value="3" checked>
-                    Hiking
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" name="activity" value="5">
-                    Skiing
-                  </label>
-                </div>
-                <div class="radio">
-                  <label>
-                    <input type="radio" name="activity" value="1">
-                    Bicycling
-                  </label>
-                </div>
-              </div>
+			  <p class="question">What's your favorite activity?</p>
+			  <div class="radio-test">
+				<div class="radio">
+				  <label>
+					<input type="radio" name="activity" value="3" checked>
+					Hiking
+				  </label>
+				</div>
+				<div class="radio">
+				  <label>
+					<input type="radio" name="activity" value="5">
+					Skiing
+				  </label>
+				</div>
+				<div class="radio">
+				  <label>
+					<input type="radio" name="activity" value="1">
+					Bicycling
+				  </label>
+				</div>
+			  </div>
 
-              <br>
+            <br>
 
                 <p class="question">What's your favorite drinking glass?</p>
                 <div class="radio-test">
@@ -135,7 +135,9 @@
                   </div>
 				  <br>
                   <button type="submit" class="btn btn-info active">Beer me!</button>
-                  </form>
+				  <button type="reset" class="btn btn-light" id="reset">Try again!</button>
+				  
+        </form>
                   <br>
           
 
@@ -143,6 +145,9 @@
 
       <div id="outputBeer">
         <h2><span id="resultBeer"></span></h2>
+		<img id="pilsner" src="img/pilsner.jpg" alt="A photo of a pilsner">
+		<img id="stout" src="img/stout.jpg" alt="A photo of a stout">
+		<img id="ipa" src="img/ipa.jpg" alt="A photo of an ipa">
         <br><br>
 
 
